[package]
name = "ProceduralContentGeneratorBackend"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.8.3", features = ["macros"] }
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
tower-http = { version = "0.6.2", features = ["cors"] }
reqwest = { version = "0.12.12", features = ["json"] }
jsonwebtoken = "9"
dotenv = "0.15"
noise = "0.9.0"
image = "0.25.6"
